--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -20,3 +20,14 @@ img {
   max-width: 100%;
   height: auto;
 }
+
+.textbox {
+  margin-bottom: var(--space-medium);
+}
+
+.upload {
+  padding: 5%;
+  width: 100%;
+  border: 1px solid lightgray;
+  border-radius: 5px;
+}
